fix(inputbutton): text align should be left (#1470)

--- a/src/input/style/index.less
+++ b/src/input/style/index.less
@@ -11,6 +11,7 @@
   color: @gray-5;
   font-family+: @font-family-primary;
   font-family+: @font-family-number;
+  text-align: left;
   border: 1px solid @gray-2;
   border-radius: @radius-border-small;
   .text-body1();
